compiler/tests/sct-checker/success/annot.jazz
#[sct = "transient → secret"]
fn f(reg u64 x) -> reg u64 {
  reg u64 r;
  _ = #init_msf();
  r = 0;
  if x > 0 {
    r = 1;
   }
   return r;
}

#[sct="k → k"]
fn id(reg u64 arg) -> reg u64 {
  _ = #init_msf();
  return arg;
}

#[sct="k → k"]
fn id1(reg u64 arg) -> reg u64 {
  return arg;
}

#[sct="{ p: p, v: v } -> { p: p, v: v }"]
fn id2(reg ptr u64[2] arg) -> reg ptr u64[2] {
  return arg;
}

#[sct = "public → public"]
fn id3(reg u64 arg) -> reg u64 {
  return arg;
}

#[sct = "transient → transient"]
fn id4(reg u64 arg) -> reg u64 {
  return arg;
}

#[sct = "secret → secret"]
fn id5(reg u64 arg) -> reg u64 {
  return arg;
}
